# Hypatia-CA

./: AGENTS.md  Cargo.toml  README.md
src/: error.rs  main.rs
src/cmd/: init_root.rs  mod.rs  revoke.rs  serve.rs  sign.rs  sign_cert.rs  signature.rs
src/util/: audit.rs  fs.rs  mod.rs
