[package]
name = "hypatia-ca"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rcgen = { version = "0.14", features = ["x509-parser"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
zeroize = "1.8"
crypt_guard = "1.3.10"
owo-colors = "4"
time = "0.3"
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }